--- a/snippets/quick-shop-modal.liquid
+++ b/snippets/quick-shop-modal.liquid
@@ -43,7 +43,14 @@
                             {% if option.name == "Size" %}
                                 {% for optionValue in option.values %}
                                     <input type="radio" name="size-{{ product.id }}-{{ section.id }}" value="{{ optionValue | escape }}" id="size-radio-{{ product.id }}-{{ section.id }}-{{ forloop.index }}" class="absolute size-selector " {% if forloop.first %}checked{% endif %}/>
-                                    <label class="form-control faux-p-sm py-s3 px-s4 border-1" for="size-radio-{{ product.id }}-{{ section.id }}-{{ forloop.index }}">{{ optionValue | slice: 0 }}</label>
+                                    <label class="form-control faux-p-sm py-s3 px-s4 border-1" for="size-radio-{{ product.id }}-{{ section.id }}-{{ forloop.index }}">
+                                        {% assign firstLetter = optionValue | slice: 0 %}
+                                        {% if firstLetter == "X" %}
+                                            {{ optionValue }}
+                                        {% else %}
+                                        {{ optionValue | slice: 0 }}
+                                        {% endif %}
+                                    </label>
                                 {% endfor %}
                             {% endif %}
                         {% endfor %}
