--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -140,7 +140,7 @@
                   </h2>
                   {% render "12-down", class: "text-black-700 mx-s2", strokeWidth:"1" %}
                 </button>
-                <div id="navAccordionContent{{ forloop.index }}" aria-labelledby="navAccordionBtn{{ forloop.index }}" class="accordion__content-wrapper content-dependant">
+                <div id="navAccordionContent{{ forloop.index }}" aria-labelledby="navAccordionBtn{{ forloop.index }}" class="accordion__content-wrapper content-dependant relative ">
                   <div class="pb-s7 rich-text">
                     {% if block.type == 'size-guide-accordion-item' %}
                       {{ block.settings.accordion_content.content }}
