--- a/sections/sale-cta.liquid
+++ b/sections/sale-cta.liquid
@@ -1,6 +1,6 @@
 <div class="bg-primary-800 py-s10 px-54 md:px-72 lg:px-s13">
   <div class="w-full max-w-content mx-auto flex to-md:flex-col to-md:items-center gap-s7 md:gap-s8 lg:gap-s9">
-    <div class="md:w-[230px] lg:min-w-[366px] shrink flex justify-center md:justify-end items-center">
+    <div class="w-[230px] lg:min-w-[366px] shrink flex justify-center md:justify-end items-center">
       {% if section.settings.headingImage %}
         <img src="{{ section.settings.headingImage | image_url }}" class="w-full" />
       {% else %}
