--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -123,7 +123,7 @@
       {% endif %}
     <script type="text/javascript" src="//www.klaviyo.com/media/js/public/klaviyo_subscribe.js"></script>
       </div>
-      {% if product.description.length > 0 %}
+      {% if product.description.size > 0 %}
       <div class="mt-s10">
         <p class="faux-p-sm text-black-800">{{ product.description }}</p>
       </div>
