--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -141,13 +141,15 @@
                   {% render "12-down", class: "text-black-700 mx-s2", strokeWidth:"1" %}
                 </button>
                 <div id="navAccordionContent{{ forloop.index }}" aria-labelledby="navAccordionBtn{{ forloop.index }}" class="accordion__content-wrapper content-dependant relative ">
-                  <div class="pb-s7 rich-text">
-                    {% if block.type == 'size-guide-accordion-item' %}
-                      {{ block.settings.accordion_content.content }}
-                    {% else %}
-                      {{ block.settings.accordion_content}}
-                    {% endif %}
+                {% if block.type == 'size-guide-accordion-item' %}
+                <div class="pb-s7 rich-text">
+                    {{ block.settings.accordion_content.content }}
+                </div>
+                {% else %}
+                  <div class="pb-s7 pt-s1 rich-text">
+                      {{ block.settings.accordion_content }}
                   </div>
+                {% endif %}
                 </div>
               </li>
             {% endfor %}
