Wharf Shop Theme Customizability Updates

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -135,7 +135,7 @@
       {% unless page_title == "404 Not Found" %}
         {% section "sale-cta" %}
       {% endunless %}
-      {% render 'footer-main' %}
+      {% section 'footer-main' %}
     </footer>
 
     <!-- keep tailwind classes to use in liquid dynamic rendering -->
