--- a/sections/home-hero.liquid
+++ b/sections/home-hero.liquid
@@ -1,5 +1,11 @@
 <div class="home-hero to-md:flex to-md:flex-col">
-  <img id="heroImg" src="{{ 'header-family.png' | asset_url }}" class="w-full max-h-[800px] object-cover flex-1" width="1520" height="1014" loading="lazy"/>
+  <img
+    id="heroImg"
+    src="{{ 'header-family.png' | asset_url }}"
+    class="w-full max-h-[800px] object-cover flex-1"
+    width="1520"
+    height="1014"
+    loading="lazy" />
   <div class="to-md:hidden absolute top-0 left-0 right-0 flex items-center w-full h-full max-w-[1440px] mx-auto py-s8">
     <div class="w-[720px] px-s14">
       <h1 class="to-md:hidden">{{ section.settings.heading }}</h1>
@@ -37,6 +43,10 @@
         "type": "url",
         "id": "buttonUrl",
         "label": "Button URL"
+      }, {
+        "type": "image_picker",
+        "id": "bgImage",
+        "label": "Background Image"
       }
     ]
   }
