hero bg change and collection title fix

--- a/sections/home-hero.liquid
+++ b/sections/home-hero.liquid
@@ -1,7 +1,7 @@
 <div class="home-hero to-md:flex to-md:flex-col">
   <img
     id="heroImg"
-    src="{{ 'header-family.png' | asset_url }}"
+    src="{{ section.settings.bgImage | image_url }}"
     class="w-full max-h-[800px] object-cover flex-1"
     width="1520"
     height="1014"
