--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -5364,6 +5364,10 @@ video {
     max-width: 380px;
   }
 
+  #app .lg\:max-w-\[480px\]{
+    max-width: 480px;
+  }
+
   #app .lg\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
@@ -5448,6 +5452,10 @@ video {
 
   #app .xl\:max-w-\[440px\]{
     max-width: 440px;
+  }
+
+  #app .xl\:max-w-\[540px\]{
+    max-width: 540px;
   }
 
   #app .xl\:p-s13{
@@ -5556,6 +5564,10 @@ video {
 
   #app .to-md\:pt-\[calc\(\(100\%\+64px\)\*1\.3\+20px\)\]{
     padding-top: calc((100% + 64px) * 1.3 + 20px);
+  }
+
+  #app .to-md\:pt-\[calc\(100\%\+84px\)\]{
+    padding-top: calc(100% + 84px);
   }
 
   #app .to-md\:text-center{
